[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
compiler = {path = "../compiler"}
vm = { path = "../vm"}
disassembler = { path = "../disassembler"}
rhexdump = "0.1.1"